--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的GitHub Pages网站</title>
+    <title>中政集团 ZHOENG</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* 基础样式 */
@@ -499,12 +499,12 @@
     <header>
         <div class="container">
             <nav class="navbar">
-                <a href="#" class="logo">Portfo<span>lio</span></a>
+                <a href="#" class="logo">中政<span> ZHOENG</span></a>
                 <ul class="nav-links">
                     <li><a href="#home">首页</a></li>
-                    <li><a href="#about">关于我</a></li>
+                    <li><a href="#about">关于</a></li>
                     <li><a href="#projects">项目</a></li>
-                    <li><a href="#skills">技能</a></li>
+                    <li><a href="#skills">业务</a></li>
                     <li><a href="#contact">联系</a></li>
                 </ul>
                 <div class="mobile-menu">
@@ -517,9 +517,9 @@
     <!-- 英雄区域 -->
     <section class="hero" id="home">
         <div class="container">
-            <h1>欢迎访问我的GitHub Pages网站</h1>
-            <p>这里展示我的项目、技能和经验。我是一个充满热情的开发者和设计师，致力于创建优秀的数字体验。</p>
-            <a href="#projects" class="btn">查看我的项目</a>
+            <h1>中政集团 中政科技</h1>
+            <p>中政 ZHOENG 中政集团 ZHONG ZHENG GROUP<br>中政科技 ZHOENG TECHNOLOGY 云华科技 CLOUD HUA TECHNOLOGY</p>
+            <a href="#projects" class="btn">查看集团项目</a>
         </div>
     </section>
 
@@ -527,19 +527,20 @@
     <section class="section" id="about">
         <div class="container">
             <div class="section-title">
-                <h2>关于我</h2>
+                <h2>关于集团</h2>
             </div>
             <div class="about-content">
                 <div class="about-text">
-                    <h3>你好！我是开发者</h3>
-                    <p>我是一名全栈开发者，专注于创建美观且功能强大的网站和应用程序。我有超过5年的开发经验，擅长使用现代Web技术。</p>
-                    <p>我热衷于学习新技术，解决问题，并与团队合作创造出色的产品。在我的空闲时间，我喜欢为开源项目做贡献和探索新的框架。</p>
-                    <a href="#" class="btn">下载简历</a>
+                    <h3>中政集团</h3>
+                    <p>中政集团，中政集团有限公司，始于公元 2025 年。</p>
+                    <p>中政科技，中政科技（集团）有限公司，是中政集团直隶子集团，由中政集团科技中心部门管辖。</p>
+                  	<p>云华科技，中政云华科技（集团）有限公司，是中政科技直隶子集团，由中政科技云华科技部门管辖。</p>
+                    <a href="#" class="btn">下载介绍</a>
                 </div>
                 <div class="about-image">
                     <!-- 这里可以放置个人照片 -->
-                    <div style="width: 100%; height: 300px; background-color: #e9ecef; border-radius: 10px; display: flex; align-items: center; justify-content: center; color: var(--text-light);">
-                        <i class="fas fa-user" style="font-size: 5rem;"></i>
+                    <div style="width: 100%; height: 300px; border-radius: 10px; display: flex; align-items: center; justify-content: center; color: var(--text-light);">
+                    <img src="https://cdn.luogu.com.cn/upload/image_hosting/6gdd37zy.png" alt="Smiley face" width="300" height="300">
                     </div>
                 </div>
             </div>
@@ -550,7 +551,7 @@
     <section class="section projects" id="projects">
         <div class="container">
             <div class="section-title">
-                <h2>我的项目</h2>
+                <h2>集团项目</h2>
             </div>
             <div class="projects-grid">
                 <!-- 项目1 -->
@@ -620,7 +621,7 @@
     <section class="section" id="skills">
         <div class="container">
             <div class="section-title">
-                <h2>我的技能</h2>
+                <h2>集团业务</h2>
             </div>
             <div class="skills-container">
                 <!-- 前端技能 -->
@@ -735,7 +736,7 @@
     <section class="section contact" id="contact">
         <div class="container">
             <div class="section-title">
-                <h2>联系我</h2>
+                <h2>联系集团</h2>
             </div>
             <div class="contact-content">
                 <div class="contact-info">
@@ -745,7 +746,7 @@
                         </div>
                         <div>
                             <h3>位置</h3>
-                            <p>中国，北京</p>
+                            <p>中国，河北</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -754,7 +755,7 @@
                         </div>
                         <div>
                             <h3>邮箱</h3>
-                            <p>example@email.com</p>
+                            <p>ZHONGZHENGGROUP@163.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -763,7 +764,7 @@
                         </div>
                         <div>
                             <h3>电话</h3>
-                            <p>+86 123 4567 8901</p>
+                            <p>+86 133 6386 1375</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -772,7 +773,7 @@
                         </div>
                         <div>
                             <h3>GitHub</h3>
-                            <p>github.com/yourusername</p>
+                            <p>github.com/zZHOENG</p>
                         </div>
                     </div>
                 </div>
@@ -804,22 +805,23 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
-                    <h3>关于我</h3>
-                    <p>一名充满热情的开发者，致力于创建优秀的数字体验和解决复杂问题。</p>
+                    <h3>关于集团</h3>
+                    <p>新一代信息技术研发与创新的中国科技集团<br></p>
+                  <div style="margin: 20px;"></div>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-github"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-weixin"></i></a>
+                        <a href="#"><i class="fab fa-qq"></i></a>
+                        <a href="#"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
                 <div class="footer-column">
                     <h3>快速链接</h3>
                     <ul class="footer-links">
                         <li><a href="#home">首页</a></li>
-                        <li><a href="#about">关于我</a></li>
+                        <li><a href="#about">关于</a></li>
                         <li><a href="#projects">项目</a></li>
-                        <li><a href="#skills">技能</a></li>
+                        <li><a href="#skills">业务</a></li>
                         <li><a href="#contact">联系</a></li>
                     </ul>
                 </div>
@@ -835,14 +837,14 @@
                 <div class="footer-column">
                     <h3>联系信息</h3>
                     <ul class="footer-links">
-                        <li><i class="fas fa-map-marker-alt"></i> 中国，北京</li>
-                        <li><i class="fas fa-envelope"></i> example@email.com</li>
-                        <li><i class="fas fa-phone"></i> +86 123 4567 8901</li>
+                        <li><i class="fas fa-map-marker-alt"></i> 中国，河北</li>
+                        <li><i class="fas fa-envelope"></i> ZHONGZHENGGROUP@163.com</li>
+                        <li><i class="fas fa-phone"></i> +86 133 6386 1375</li>
                     </ul>
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 我的GitHub Pages网站. 保留所有权利.</p>
+                <p>&copy; 2025 中政集团. 保留所有权利.</p>
             </div>
         </div>
     </footer>
